infrastructure/platform/security/egress/egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payu-egress-allow
  namespace: payu-dev
spec:
  podSelector: {}
  policyTypes: ["Egress"]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: openshift-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 9092
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: payu-egress-gateway
  namespace: payu-dev
spec:
  hosts: ["api.bi.go.id", "api.keycloak.example.com"]
  ports:
    - number: 443
      name: https
      protocol: TLS
  location: MESH_EXTERNAL
  resolution: DNS
